navbar initially styled

--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <link href="style.css" rel="stylesheet">
 </head>
 <body>
+    <nav class="navbar">
+        <div class="brand-title">Library App </div>
+        <div class="navbar-links">
+            <ul>
+                <li><a href="#">About</a></li>
+                <li><button>Login</button></li>
+            </ul>
+        </div>
+
+    </nav>
 
 
     
