--- a/index.html
+++ b/index.html
@@ -10,10 +10,8 @@
     <nav class="navbar">
         <div class="brand-title">Library App </div>
         <div class="navbar-links">
-            <ul>
-                <li><a href="#">About</a></li>
-                <li><button>Login</button></li>
-            </ul>
+            <a href="#">About</a>
+            <button>Login</button>
         </div>
 
     </nav>
