--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="brand-title">Library App </div>
         <div class="navbar-links">
             <a href="#">About</a>
-            <button>Login</button>
+            <a href="#">About</a>
         </div>
 
     </nav>
