--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
 </head>
 <body>
     <nav class="navbar">
-        <div class="brand-title">Library App </div>
+        <div class="brand-title">Library App</div>
         <div class="navbar-links">
-            <a href="#">About</a>
-            <a href="#">About</a>
+            <ul>
+                <li><a href="#">Connect</a></li>
+                <li><a href="#">Github</a></li>
+                <li><a href="#">Login</a></li>
+            </ul>
         </div>
 
     </nav>
