working on toggle button now

--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
 <body>
     <nav class="navbar">
         <div class="brand-title">Library App</div>
+        <a href="#" class="toggle-button">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </a>
         <div class="navbar-links">
             <ul>
                 <li><a href="#">Connect</a></li>
