toggle-button progress
change display to flex to see toggle button

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <nav class="navbar">
         <div class="brand-title">Library App</div>
-        <a href="#" class="toggle-button">
+        <a href="#" class="navbar-toggle">
             <span class="bar"></span>
             <span class="bar"></span>
             <span class="bar"></span>
