navbar done for now

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         </a>
         <div class="navbar-links">
             <ul>
-                <li><a href="#">Connect</a></li>
-                <li><a href="#">Github</a></li>
-                <li><a href="#">Login</a></li>
+                <li><a href="https://www.linkedin.com/in/mohamed-hasan-4b850418a/">Connect</a></li>
+                <li><a href="https://github.com/moproblems8">Github</a></li>
+                <li><a href="#"><button>Login</button></a></li>
             </ul>
         </div>
 
