--- a/index.html
+++ b/index.html
@@ -21,15 +21,17 @@
         <div class="navbar-links">
             <ul>
                 <li><a href="https://www.linkedin.com/in/mohamed-hasan-4b850418a/">Connect</a></li>
-                <li><a href="https://github.com/moproblems8">Github</a></li>
+                <li><a href="https://github.com/momoproblems">Github</a></li>
                 <li><a href="#"><button>Login</button></a></li>
             </ul>
         </div>
 
     </nav>
 
-    <main class="">
-
+    <main>
+        <div class="books-grid">
+            <div class="book-card">ewarew</div>
+        </div>
     </main>
     
     <script src="script.js"></script>
