attempting to make a card

--- a/index.html
+++ b/index.html
@@ -30,9 +30,32 @@
 
     <main>
         <div class="books-grid">
-            <div class="book-card">ewarew</div>
+            <div class="book-card">
+                <div class="book-card-title">
+                    <div class="book-card-imgs"><img src="assets/imgs/book.svg"/></div>
+                    <div class="book-card-text">The Lord of the Rings</div>
+                </div>
+                <div class="book-card-title">
+                    <div class="book-card-imgs"><img src="assets/imgs/author.svg"/></div>
+                    <div class="book-card-text">The Lord of the Rings</div>
+                </div>
+                <div class="book-card-title">
+                    <div class="book-card-imgs"><img src="assets/imgs/pages.svg"/></div>
+                    <div class="book-card-text">The Lord of the Rings</div>
+                </div>
+            </div>
         </div>
     </main>
+
+    <div class="add-book">
+        <img src="assets/imgs/add.svg">
+    </div>
+
+    <footer class="footer">
+        <div class="footer-text">
+            created by momoproblems for The Odin Project
+        </div>
+    </footer>
     
     <script src="script.js"></script>
 </body>
