added font for card

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bacasime+Antique&display=swap" rel="stylesheet">
+
     <link href="style.css" rel="stylesheet">
 </head>
 <body>
@@ -37,11 +39,11 @@
                 </div>
                 <div class="book-card-title">
                     <div class="book-card-imgs"><img src="assets/imgs/author.svg"/></div>
-                    <div class="book-card-text">The Lord of the Rings</div>
+                    <div class="book-card-text">J.R.R. Tolkien</div>
                 </div>
                 <div class="book-card-title">
                     <div class="book-card-imgs"><img src="assets/imgs/pages.svg"/></div>
-                    <div class="book-card-text">The Lord of the Rings</div>
+                    <div class="book-card-text">714</div>
                 </div>
             </div>
         </div>
