--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
                     <div class="book-card-imgs"><img src="assets/imgs/pages.svg"/></div>
                     <div class="book-card-text">714</div>
                 </div>
+                <div class="book-card-buttons">
+                    <div><button class="button button-primary book-card-edit-button">Edit</button></div>
+                    <div><button class="button button-secondary book-card-remove-button">Remove</button></div>
+                </div>
             </div>
 
 
@@ -54,6 +58,31 @@
     <div class="add-book">
         <img src="assets/imgs/add.svg">
     </div>
+    <div class="add-book-container">
+        <form class="add-book-form">
+          <div class="book-card">
+            <div class="book-card-title">
+              <div class="book-card-imgs"><img src="assets/imgs/book.svg" alt="Book Cover"></div>
+              <div class="book-card-text">
+                <input type="text" placeholder="Book Title" required>
+              </div>
+            </div>
+            <div class="book-card-title">
+              <div class="book-card-imgs"><img src="assets/imgs/author.svg" alt="Author"></div>
+              <div class="book-card-text">
+                <input type="text" placeholder="Author Name" required>
+              </div>
+            </div>
+            <div class="book-card-title">
+              <div class="book-card-imgs"><img src="assets/imgs/pages.svg" alt="Pages"></div>
+              <div class="book-card-text">
+                <input type="number" placeholder="Number of Pages" required>
+              </div>
+            </div>
+            <button class="btn">Add Book</button>
+          </div>
+        </form>
+      </div>
 
     <footer class="footer">
         <div class="footer-text">
