--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
     <div class="add-book">
         <img src="assets/imgs/add.svg">
     </div>
+
+    <div class="add-book-overlay"></div>
     <div class="add-book-container">
         <form class="add-book-form">
           <div class="book-card">
