image placed on new card
background-size: cover; covers the entire width and height with the img

--- a/index.html
+++ b/index.html
@@ -30,7 +30,20 @@
 
     <main>
         <div class="books-grid">
-            <div class="book-card">ewarew</div>
+
+            <div class="book-card">
+                <div class="book-image"></div>
+                <div class="book-info">
+                    <h2>Book Title</h2>
+                    <h3>Author</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatum.</p>
+                </div>
+                <div class="book-buttons">
+                    <button class="btn">Add to Cart</button>
+                    <button class="btn">Add to Wishlist</button>
+                </div>
+            </div>
+
         </div>
     </main>
     
