card coming together

--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
         <div class="books-grid">
 
             <div class="book-card">
-                <div class="book-image"></div>
+                <div class="book-image">
+                    <img src="assets/imgs/book-card-image.jpg">
+                </div>
                 <div class="book-info">
                     <h2>Book Title</h2>
                     <h3>Author</h3>
