card good for now, now need to make butttons

--- a/index.html
+++ b/index.html
@@ -36,9 +36,10 @@
                     <img src="assets/imgs/book-card-image.jpg">
                 </div>
                 <div class="book-info">
-                    <h2>Book Title</h2>
-                    <h3>Author</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatum.</p>
+                    <h1>The Lord of the Rings</h1>
+                    <h2>J.R.R. Tolkien</h2>
+                    <p>716</p>
+
                 </div>
                 <div class="book-buttons">
                     <button class="btn">Add to Cart</button>
