--- a/index.html
+++ b/index.html
@@ -42,8 +42,9 @@
 
                 </div>
                 <div class="book-buttons">
-                    <button class="btn">Add to Cart</button>
-                    <button class="btn">Add to Wishlist</button>
+                    <div>Edit</div>
+                    <div>Read</div>
+                    <div>Remove</div>
                 </div>
             </div>
 
