--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
 
                 </div>
                 <div class="book-buttons">
-                    <div>Edit</div>
-                    <div>Read</div>
-                    <div>Remove</div>
+                    <div class="book-button-edit">Edit</div>
+                    <div class="book-button-read">Read</div>
+                    <div class="book-button-remove">Remove</div>
                 </div>
             </div>
 
