initially form setup

--- a/index.html
+++ b/index.html
@@ -50,6 +50,19 @@
 
         </div>
     </main>
+
+    <form>
+        <div class="book-card-form">
+            <input type="text" placeholder="Title" id="form-title">
+            <input type="text" placeholder="Author" id="form-author">
+            <input type="text" placeholder="Pages" id="form-pages">
+            <div class="book-buttons">
+                <div class="book-form-button" id="form-read-yes">Read</div>
+                <div class="book-form-button" id="form-read-no">Not Read</div>
+            </div>
+            <div class="book-form-button">Submit</div>
+        </div>
+    </form>
     
     <script src="script.js"></script>
 </body>
