--- a/index.html
+++ b/index.html
@@ -53,14 +53,15 @@
 
     <form>
         <div class="book-card-form">
+            <div style="font-family: Oswald, sans-serif;">Add a Book :)</div>
             <input type="text" placeholder="Title" id="form-title">
             <input type="text" placeholder="Author" id="form-author">
             <input type="text" placeholder="Pages" id="form-pages">
             <div class="book-buttons">
-                <div class="book-form-button" id="form-read-yes">Read</div>
-                <div class="book-form-button" id="form-read-no">Not Read</div>
+                <div class="book-form-button" id="form-read-yes" style="background-color: #4ade80;">Read</div>
+                <div class="book-form-button" id="form-read-no" style="background-color: #f87171;">Not Read</div>
             </div>
-            <div class="book-form-button">Submit</div>
+            <div class="book-form-button" style="background-color: #a78bfa;">Submit</div>
         </div>
     </form>
     
