updates to button hovers and structure

--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
             <input type="text" placeholder="Author" id="form-author" required>
             <input type="number" placeholder="Pages" id="form-pages" required>
             <div class="book-buttons">
-                <div class="book-form-button" id="form-read-yes" style="background-color: #4ade80;">Read</div>
-                <div class="book-form-button" id="form-read-no" style="background-color: #f87171;">Not Read</div>
+                <div class="book-form-button book-form-button-read" id="form-read-yes">Read</div>
+                <div class="book-form-button book-form-button-not-read" id="form-read-no">Not Read</div>
             </div>
-            <input type="submit" class="book-form-button" style="background-color: #a78bfa;" value="Submit">
+            <input type="submit" class="book-form-button book-form-button-submit" value="Submit">
         </div>
     </form>
     
