added an add book button

--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
             <input type="submit" class="book-form-button book-form-button-submit" value="Submit">
         </div>
     </form>
+
+    <img src="assets/imgs/add-icon-2.png" class="add-book-button" id="add-book-button">
     
     <script src="script.js"></script>
 </body>
