button functionality works now!

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </div>
     </main>
 
-    <form class="book-card-wrapper">
+    <form class="book-card-wrapper" id="book-card-wrapper">
         <div class="book-card-form">
             <div style="font-family: Oswald, sans-serif;">Add a Book :)</div>
             <input type="text" placeholder="Title" id="form-title" required>
