updated some lines of code

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
     </form>
 
     <img src="assets/imgs/add-icon-2.png" class="add-book-button" id="add-book-button">
+    <div id="overlay"></div>
     
     <script src="script.js"></script>
 </body>
