read/not read button works

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 </div>
                 <div class="book-buttons">
                     <div class="book-button-edit">Edit</div>
-                    <div class="book-button-read">Read</div>
+                    <div class="book-button-read" id="readStatusToggle">Read</div>
                     <div class="book-button-remove">Remove</div>
                 </div>
             </div>
