--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
     </nav>
 
     <main  id="blur">
-        <div class="books-grid">
-
+        <div class="books-grid" id="bookGrid">
             <div class="book-card">
                 <div class="book-image">
                     <img src="assets/imgs/book-card-image.jpg">
@@ -47,7 +46,6 @@
                     <div class="book-button-remove">Remove</div>
                 </div>
             </div>
-
         </div>
     </main>
 
