cards are not ligning up

--- a/index.html
+++ b/index.html
@@ -46,6 +46,40 @@
                     <div class="book-button-remove">Remove</div>
                 </div>
             </div>
+
+            <div class="book-card">
+                <div class="book-image">
+                    <img src="assets/imgs/book-card-image.jpg">
+                </div>
+                <div class="book-info">
+                    <h1>The Lord of the Ringsjkhg k kjgh kjg kjg kj gkjhg kjg kjhg kjhg kj gkj gkj</h1>
+                    <h2>J.R.R. Tolkien</h2>
+                    <p>716</p>
+
+                </div>
+                <div class="book-buttons">
+                    <div class="book-button-edit">Edit</div>
+                    <div class="book-button-read" id="readStatusToggle">Read</div>
+                    <div class="book-button-remove">Remove</div>
+                </div>
+            </div>
+
+            <div class="book-card">
+                <div class="book-image">
+                    <img src="assets/imgs/book-card-image.jpg">
+                </div>
+                <div class="book-info">
+                    <h1></h1>
+                    <h2>J.R.R. Tolkien</h2>
+                    <p>716</p>
+
+                </div>
+                <div class="book-buttons">
+                    <div class="book-button-edit">Edit</div>
+                    <div class="book-button-read" id="readStatusToggle">Read</div>
+                    <div class="book-button-remove">Remove</div>
+                </div>
+            </div>
         </div>
     </main>
 
