toggle now works for each button

--- a/index.html
+++ b/index.html
@@ -42,11 +42,44 @@
                 </div>
                 <div class="book-buttons">
                     <div class="book-button-edit">Edit</div>
-                    <div class="book-button-read" id="readStatusToggle">Read</div>
+                    <div class="book-button-read">Read</div>
                     <div class="book-button-remove">Remove</div>
                 </div>
             </div>
 
+            <div class="book-card">
+                <div class="book-image">
+                    <img src="assets/imgs/book-card-image.jpg">
+                </div>
+                <div class="book-info">
+                    <h1>test book</h1>
+                    <h2>test author</h2>
+                    <p>7162</p>
+
+                </div>
+                <div class="book-buttons">
+                    <div class="book-button-edit">Edit</div>
+                    <div class="book-button-read" id="readStatusToggle">Not Read</div>
+                    <div class="book-button-remove">Remove</div>
+                </div>
+            </div>
+
+            <div class="book-card">
+                <div class="book-image">
+                    <img src="assets/imgs/book-card-image.jpg">
+                </div>
+                <div class="book-info">
+                    <h1>test book 2</h1>
+                    <h2>test author 2</h2>
+                    <p>72</p>
+
+                </div>
+                <div class="book-buttons">
+                    <div class="book-button-edit">Edit</div>
+                    <div class="book-button-read" id="readStatusToggle">Read</div>
+                    <div class="book-button-remove">Remove</div>
+                </div>
+            </div>
         </div>
     </main>
 
