Revert "MAIN FUNCTIONALITY DONE!"
This reverts commit 04e203f1570a26e6ec6138315f11796dae7cc088.

--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
 
                 </div>
                 <div class="book-buttons">
-                    <div class="book-button-edit">1</div>
+                    <div class="book-button-edit">Edit</div>
                     <div class="book-button-read">Read</div>
                     <div class="book-button-remove">Remove</div>
                 </div>
             </div>
-
+            
         </div>
     </main>
 
